--- a/Conference/conference.webclient/src/pages/Quest/QuestMeeting.module.css
+++ b/Conference/conference.webclient/src/pages/Quest/QuestMeeting.module.css
@@ -4,3 +4,10 @@
     padding: 0 16px;
     border: 1px solid rgba(140, 140, 140, 0.35);
 }
+
+.Content {
+    padding: 50px;
+    background: rgba(0, 0, 0, 0.05);
+    border-radius: 4px;
+    height: 100vh;
+}
