--- a/Conference/conference.webclient/src/components/DecisionsList/DecisionsList.module.css
+++ b/Conference/conference.webclient/src/components/DecisionsList/DecisionsList.module.css
@@ -1,2 +1,6 @@
-body {
+.ListContainer {
+    height: 400px;
+    overflow: auto;
+    padding: 0 16px;
+    border: 1px solid rgba(140, 140, 140, 0.35);
 }
